--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/french_toast.html">French Toast Recipe</a>
+    <ul>
+      <li><a href="recipes/french_toast.html">French Toast Recipe</a></li>
+      <li><a href="recipes/red_velvet_cake.html">Red Velvet Cake Recipe</a></li>
+      <li><a href="recipes/rice_krispies_treats.html">Caramelized Brown Butter Rice Krispies Treats</a></li>
+    </ul>
   </body>
 </html>
