--- a/recipes/french_toast.html
+++ b/recipes/french_toast.html
@@ -8,5 +8,31 @@
   <body>
     <h1>French Toast</h1>
     <img src="https://static01.nyt.com/images/2017/05/03/dining/03FRENCHTOAST2/03FRENCHTOAST2-videoSixteenByNine390.jpg" alt="French Toast">
+
+    <h2>Description</h2>
+    <p>A simple french toast recipe that provides a buttery taste and a firm but fluffy texture.</p>
+    <p>For a lacy brown crust, sprinkle on sugar toward the end of cooking; it will caramelize and turn glossy. Just make sure to keep the heat low after you add the sugar, otherwise it could burn quickly over high heat.</p>
+    
+    <h2>Ingredients</h2>
+      <ul>
+        <li>2 whole eggs</li>
+        <li>2 egg yolks</li>
+        <li>2 cups whole milk</li>
+        <li>1 tsp vanilla extract</li>
+        <li>pinch of salt</li>
+        <li>unsalted butter, for cooking</li>
+        <li>8 slices white bread, such as brioche or challah</li>
+        <li>cinnamon or granulated sugar</li>
+      </ul>
+
+    <h2>Steps</h2>
+      <ol>
+        <li>Heat oven to 200 degrees, and place a wire rack on a sheet pan inside.</li>
+        <li>In a shallow bowl, whisk the eggs, additional yolks, milk, vanilla, and salt until foamy and smooth. Set aside. Put a small lump of butter (enough to coat the bottom of the skillet when melted) in a large, heavy nonstick skillet over low heat.</li>
+        <li>When butter is just melted and bubbling, raise heat and bring to a sizzle. Place 2 slices of bread in the bowl with the egg mixture. Turn them a few times in the mixture until evenly saturated, about 5 seconds on each side.</li>
+        <li>Lift a slice out of the egg mixture, gently shake off any excess, and place in the pan. Repeat until skillet is full, and let the slices cook at a sizzle for about 2 minutes, until just turning golden brown on the bottom.</li>
+        <li>Add another small lump of butter to the pan and flip the slices over, swirling the pan so that the fresh butter coats the bottom.</li>
+        <li>Continue cooking over low heat until the second side is golden brown. Dust with cinnamon sugar, flip again, and dust the other side. Test for doneness by pressing the center: the dent should slowly spring back. If it remains, the interior is not yet cooked. Continue cooking at low heat, flipping occasionally, until done. Serve immediately, or transfer to the oven to keep warm while cooking remaining bread. Serve as soon as possible. Top with maple syrup, berries, jam, sliced bananas--whatever you'd like.</li>
+      </ol>
   </body>
 </html>
